force-app/main/default/objects/TankMasterData__c/TankMasterData__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los campos con información sobre las opciones y costes de instalación de los depósitos de gas.</description>
    <label>Maestro de Depósito</label>
    <nameField>
        <label>Modelo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestro de Depósitos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>