force-app/main/default/objects/TankMasterData__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Capacidad del del depósito de gas</description>
    <label>Capacidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>