force-app/main/default/objects/TankMasterData__c/fields/CivilWorks__c.field-meta.xml
<CustomField>
    <fullName>CivilWorks__c</fullName>
    <description>Coste de la obra</description>
    <label>Obra Civil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>