force-app/main/default/objects/TankMasterData__c/fields/Dismantle__c.field-meta.xml
<CustomField>
    <fullName>Dismantle__c</fullName>
    <description>Coste del desmantelamiento del depósito</description>
    <label>Desmantelamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>