force-app/main/default/objects/TankMasterData__c/fields/EarlyTermination__c.field-meta.xml
<CustomField>
    <fullName>EarlyTermination__c</fullName>
    <label>Resolución Anticipada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>