force-app/main/default/objects/TankMasterData__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Id externo creado para facilitar la carga de datos empleando la función de Id Externo de los costes de legalización y de mantenimiento. Contiene el modelo del depósito</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>