force-app/main/default/objects/TankMasterData__c/fields/Fencing__c.field-meta.xml
<CustomField>
    <fullName>Fencing__c</fullName>
    <description>Coste del vallado de la instalación.</description>
    <label>Vallado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>