force-app/main/default/objects/TankMasterData__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <description>Coste de la instalación exterior</description>
    <label>Instalación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>