force-app/main/default/objects/TankMasterData__c/fields/IsAerial__c.field-meta.xml
<CustomField>
    <fullName>IsAerial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicación de si es un depósito al aire.</description>
    <label>Es Aéreo</label>
    <type>Checkbox</type>
</CustomField>