force-app/main/default/objects/TankMasterData__c/fields/ProjectMemory__c.field-meta.xml
<CustomField>
    <fullName>ProjectMemory__c</fullName>
    <label>Proyecto / Memoria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>