force-app/main/default/objects/TankMasterData__c/fields/TankName__c.field-meta.xml
<CustomField>
    <fullName>TankName__c</fullName>
    <description>Modelo de depósito</description>
    <label>Tank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>