force-app/main/default/objects/TankMasterData__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LP16000E</fullName>
            </value>
            <value>
                <fullName>SM1000A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>