force-app/main/default/objects/TankMasterData__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <description>Coste del Transporte de depósito</description>
    <label>Transporte</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>