force-app/main/default/objects/TankMasterData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Transport__c</columns>
    <columns>Installation__c</columns>
    <columns>ProjectMemory__c</columns>
    <columns>CivilWorks__c</columns>
    <columns>Fencing__c</columns>
    <columns>IsAerial__c</columns>
    <columns>Dismantle__c</columns>
    <columns>EarlyTermination__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>